--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,4 +1,4 @@
-
+//THIS IS MODIFIED VERSION OF https://github.com/shdShadow/Hyprland-pokemon WAYBAR DOTFILES
 {
 	"layer": "top",
 	"position": "top",
