--- a/DOTFILES/.config/hypr/hyprlock.conf
+++ b/DOTFILES/.config/hypr/hyprlock.conf
@@ -32,7 +32,7 @@ animations {
 
 background {
     monitor =
-    path = /home/simon/Downloads/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg 
+    path = ~/Downloads/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg 
     blur_passes = 3
 }
 
