mostly done install script

--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -26,7 +26,8 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun -show-icons
 $browser = firefox
-$prtsc = grim ~/Downloads/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
+$prtsc = hyprshot -m region
+
 #################
 ### AUTOSTART ###
 #################
