--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-
 # workspaces
 workspace = 1, persistent:true
 workspace = 2, persistent:true
@@ -26,7 +25,7 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun -show-icons
 $browser = firefox
-$prtsc = hyprshot -m region
+$prtsc = hyprshot -m region -o ~/Pictures -f "$(date +%Y-%m-%d_%H-%M-%S).png"
 
 #################
 ### AUTOSTART ###
