--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ $prtsc = hyprshot -m region -o ~/Pictures -f "$(date +%Y-%m-%d_%H-%M-%S).png"
 # exec-once = $terminal
 # exec-once = nm-applet &
  exec-once = waybar &
- exec-once swaync &
+ exec-once = swaync &
  exec-once = hyprpaper &
 
 #############################
