--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -213,7 +213,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, A, exec, $menu
 bind = $mainMod, PRINT, exec, $prtsc
-bind = $mainMod, I, exec, ~/.config/hypr/scripts/wlogout.sh
+bind = $mainMod, W, exec, ~/.config/scripts/wlogout.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
