Changed hyprlock conf to show actuall name of user

--- a/DOTFILES/.config/hypr/hyprlock.conf
+++ b/DOTFILES/.config/hypr/hyprlock.conf
@@ -93,7 +93,7 @@ label {
 
 label {
     monitor =
-    text = Hi there, Simon
+    text = Hi there, $USER
     font_size = 25
     font_family = $font
 
