--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -214,7 +214,9 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, A, exec, $menu
 bind = $mainMod, PRINT, exec, $prtsc
 bind = $mainMod, W, exec, wlogout
-
+bind = $mainMod, N, exec, hyprctl dispatch fullscreen 1
+bind = $mainMod, Z, exec, killall -SIGUSR2 waybar
+bind = $mainMod, D, exec, pkill -9 Discord
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
