--- a/DOTFILES/.config/hypr/hyprlock.conf
+++ b/DOTFILES/.config/hypr/hyprlock.conf
@@ -1,103 +1,97 @@
-# sample hyprlock.conf
-# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
+#  _   _                  _            _    
+# | | | |_   _ _ __  _ __| | ___   ___| | __
+# | |_| | | | | '_ \| '__| |/ _ \ / __| |/ /
+# |  _  | |_| | |_) | |  | | (_) | (__|   < 
+# |_| |_|\__, | .__/|_|  |_|\___/ \___|_|\_\
+#        |___/|_|                           
+# by ygweygyigyigyigerig (2025)
 #
-# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
-# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
-#
-# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
 
 $font = Monospace
 
 general {
-    hide_cursor = true
+  hide_cursor = true
 }
-
-# uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
 
 animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
+  enabled = true
+  bezier = linear, 1, 1, 0, 0
+  animation = fadeIn, 1, 5, linear
+  animation = fadeOut, 1, 5, linear
+  animation = inputFieldDots, 1, 2, linear
 }
 
+# Frogprog 10.05.2025
+
+# you should create separate directory for all of your wallpapers
+# and install it with your setup
+
+# so it could be smth like this:
+# path = ~/.config/wallpapers/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg
+
 background {
-    monitor =
-    path = ~/Downloads/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg 
-    blur_passes = 3
+  monitor =
+  path = ~/Downloads/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg 
+  blur_passes = 3
 }
 
 input-field {
-    monitor =
-    size = 20%, 5%
-    outline_thickness = 2
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
+  monitor =
+  size = 20%, 5%
+  outline_thickness = 2
+  inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+  outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+  check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
+  fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
 
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = false
-    rounding = 15
+  font_color = rgb(143, 143, 143)
+  fade_on_empty = false
+  rounding = 15
 
-    font_family = $font
-    placeholder_text = *Input password*
-    fail_text = $PAMFAIL
+  font_family = $font
+  placeholder_text = *Input password*
+  fail_text = $PAMFAIL
 
-    # uncomment to use a letter instead of a dot to indicate the typed password
-    # dots_text_format = *
-    dots_size = 0.3
-    dots_spacing = 0.3
+  dots_size = 0.3
+  dots_spacing = 0.3
 
-    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
-    # hide_input = true
-
-    position = 0, -20
-    halign = center
-    valign = center
+  position = 0, -20
+  halign = center
+  valign = center
 }
 
 # TIME
 label {
-    monitor =
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 90
-    font_family = $font
+  monitor =
+  text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+  font_size = 90
+  font_family = $font
 
-    position = -30, 0
-    halign = right
-    valign = top
+  position = -30, 0
+  halign = right
+  valign = top
 }
 
 # DATE
 label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
-    font_size = 25
-    font_family = $font
+  monitor =
+  text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
+  font_size = 25
+  font_family = $font
 
-    position = -30, -150
-    halign = right
-    valign = top
+  position = -30, -150
+  halign = right
+  valign = top
 }
 
 label {
-    monitor =
-    text = Hi there, $USER
-    font_size = 25
-    font_family = $font
+  monitor =
+  text = Hi there, $USER
+  font_size = 25
+  font_family = $font
 
-    position = 0, 50
-    halign = center
-    valign = center
+  position = 0, 50
+  halign = center
+  valign = center
 }
