--- a/DOTFILES/.config/waybar/config.jsonc
+++ b/DOTFILES/.config/waybar/config.jsonc
@@ -1,3 +1,12 @@
+// __        __          _                                   __ _       
+// \ \      / /_ _ _   _| |__   __ _ _ __    ___ ___  _ __  / _(_) __ _ 
+//  \ \ /\ / / _` | | | | '_ \ / _` | '__|  / __/ _ \| '_ \| |_| |/ _` |
+//   \ V  V / (_| | |_| | |_) | (_| | |    | (_| (_) | | | |  _| | (_| |
+//    \_/\_/ \__,_|\__, |_.__/ \__,_|_|     \___\___/|_| |_|_| |_|\__, |
+//                 |___/                                          |___/ 
+//
+//  by ygweygyigyigyigerig (2025)
+
 //THIS IS MODIFIED VERSION OF https://github.com/shdShadow/Hyprland-pokemon WAYBAR DOTFILES
 {
 	"layer": "top",
@@ -35,16 +44,16 @@
 		"height": 0
 	},
 
-      "wlr/taskbar": {
-      "icon-size": 23,
-      "on-click": "activate",
-      "format": "{icon}"
-      },	
+  "wlr/taskbar": {
+    "icon-size": 23,
+    "on-click": "activate",
+    "format": "{icon}"
+  },	
 
 	"clock": {
-	"format": "  {:%H:%M} ",
-        "interval": 60
-        }, 
+	  "format": "  {:%H:%M} ",
+    "interval": 60
+  }, 
 
 	"network": {
 		"interval": 5,
@@ -63,61 +72,62 @@
 		]
 	},
 
-		
-		"custom/network-gui": {
-                  "format": "",
-                  "tooltip": "Network manager",
-                  "on-click": "nm-connection-editor",
-                  "interval": 3600
-},		
+	"custom/network-gui": {
+    "format": "",
+    "tooltip": "Network manager",
+    "on-click": "nm-connection-editor",
+    "interval": 3600
+  },		
 
-
-
-		"custom/poweroff": {
-		"format": "",
-    		"tooltip": "Power Off",
-		"on-click": "systemctl poweroff",
-  		"interval": 3600
-},
-
+	"custom/poweroff": {
+	  "format": "",
+    "tooltip": "Power Off",
+	  "on-click": "systemctl poweroff",
+  	"interval": 3600
+  },
 
 	"custom/reboot": {
 		"format": "",
-    		"tooltip": "reboot",
+   	"tooltip": "reboot",
 		"on-click": "reboot",
-  		"interval": 3600
-},
+  	"interval": 3600
+  },
 
 
 	"custom/lock": {
 		"format": "",
-    		"tooltip": "lock",
+    "tooltip": "lock",
 		"on-click": "hyprlock",
-  		"interval": 3600
-},
+  	"interval": 3600
+  },
 
 	"custom/swaync": {
 		"format": "",
-    		"tooltip": "notification center",
+    "tooltip": "notification center",
 		"on-click": "swaync-client -t -sw",
-  		"interval": 3600
-},
+  	"interval": 3600
+  },
+
 	"network#net2": {
 		"interval": 5,
 		"interface": "enp7s0",
 		"format": "<span color='cyan'></span>{bandwidthDownBytes:>} <span color='cyan'> </span>{bandwidthUpBytes:>}"
 	},
+
 	"custom/void": {
 		"format": "<span color='cyan'>  󰇙 </span>"
 	},
+
 	"custom/space": {
 		"format": "<span>  </span>"
 	},
+
 	"pulseaudio/slider": {
 		"min": 0,
 		"max": 100,
 		"orientation": "horizontal"
 	},
+
 	"pulseaudio#sink": {
 		"format": "{icon}",
 		"format-bluetooth": "{icon}",
@@ -145,6 +155,4 @@
 		"on-scroll-up": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 2.0",
 		"on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- -l 2.0"
 	},
-
-}
 }
