Change of network gui app to nmtui.
nmtui may look worse, but its gui functionality is much better .

--- a/DOTFILES/.config/waybar/config.jsonc
+++ b/DOTFILES/.config/waybar/config.jsonc
@@ -75,7 +75,7 @@
 	"custom/network-gui": {
     "format": "",
     "tooltip": "Network manager",
-    "on-click": "nm-connection-editor",
+    "on-click": "nmtui",
     "interval": 3600
   },		
 
