Updated network app icon to work on all systems

--- a/DOTFILES/.config/waybar/config.jsonc
+++ b/DOTFILES/.config/waybar/config.jsonc
@@ -73,7 +73,7 @@
 	},
 
 	"custom/network-gui": {
-    "format": "",
+    "format": "🖧",
     "tooltip": "Network manager",
     "on-click": "nmtui",
     "interval": 3600
