--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -279,6 +279,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
-
+windowrulev2 = float,class:^org.gnome.clocks$
+windowrulev2 = size 604 589,class:^org.gnome.clocks$
+windowrulev2 = move 1935 40,class:^org.gnome.clocks$
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
