Window rule for update of displayed network and its stats

--- a/DOTFILES/.config/hypr/hyprland.conf
+++ b/DOTFILES/.config/hypr/hyprland.conf
@@ -282,5 +282,10 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float,class:^org.gnome.clocks$
 windowrulev2 = size 604 589,class:^org.gnome.clocks$
 windowrulev2 = move 1935 40,class:^org.gnome.clocks$
+
+windowrulev2 = float,class:^MyScriptWindow$ 
+windowrulev2 = move 320 40 ,class:^MyScriptWindow$
+windowrulev2 = size 515 500,class:^MyScriptWindow$
+
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
