From now on, hyprpaper uses proper png from proper directory.

--- a/DOTFILES/.config/hypr/hyprpaper.conf
+++ b/DOTFILES/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Downloads/wallpapersden.com_starry-landscape-4k-cool-blue-moon_3840x2160.jpg
-wallpaper = , ~/Downloads/wallpapersden.com_starry-landscape-4k-cool-blue-moon_3840x2160.jpg
+preload = ~/.config/wallpapers/main_wallpaper.png
+wallpaper = , ~/.config/wallpapers/main_wallpaper.png 
