--- a/DOTFILES/.config/hypr/hyprlock.conf
+++ b/DOTFILES/.config/hypr/hyprlock.conf
@@ -31,7 +31,7 @@ animations {
 
 background {
   monitor =
-  path = ~/Downloads/beautiful-green-leaves-monstera-hd-wallpaper-preview.jpg 
+  path = ~/.config/wallpapers/hyprlock_wallpaper.png 
   blur_passes = 3
 }
 
