Update of hyprpaper and hyprlock to use new (real) image format.

--- a/DOTFILES/.config/hypr/hyprlock.conf
+++ b/DOTFILES/.config/hypr/hyprlock.conf
@@ -31,7 +31,7 @@ animations {
 
 background {
   monitor =
-  path = ~/.config/wallpapers/hyprlock_wallpaper.png 
+  path = ~/.config/wallpapers/hyprlock_wallpaper.jpg 
   blur_passes = 3
 }
 
