--- a/DOTFILES/.config/hypr/hyprpaper.conf
+++ b/DOTFILES/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/wallpapers/main_wallpaper.png
-wallpaper = , ~/.config/wallpapers/main_wallpaper.png 
+preload = ~/.config/wallpapers/main_wallpaper.jpg
+wallpaper = , ~/.config/wallpapers/main_wallpaper.jpg 
